--- a/表格排序/index.html
+++ b/表格排序/index.html
@@ -18,44 +18,10 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>令狐冲</td>
-                    <td>25</td>
-                    <td>99</td>
-                    <td>男</td>
-                </tr>
-                <tr>
-                    <td>令狐冲</td>
-                    <td>25</td>
-                    <td>99</td>
-                    <td>男</td>
-                </tr>
-                <tr>
-                    <td>令狐冲</td>
-                    <td>25</td>
-                    <td>99</td>
-                    <td>男</td>
-                </tr>
-                <tr>
-                    <td>令狐冲</td>
-                    <td>25</td>
-                    <td>99</td>
-                    <td>男</td>
-                </tr>
-                <tr>
-                    <td>令狐冲</td>
-                    <td>25</td>
-                    <td>99</td>
-                    <td>男</td>
-                </tr>
-                <tr>
-                    <td>令狐冲</td>
-                    <td>25</td>
-                    <td>99</td>
-                    <td>男</td>
-                </tr>
             </tbody>
         </table>
     </div>
+    <script src="ajax.js" charset="utf-8"></script>
+    <script src="tab.js" charset="utf-8"></script>
 </body>
 </html>
