--- a/box/delayOnload/step1/step1.html
+++ b/box/delayOnload/step1/step1.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="step1.css">
 </head>
 <body>
     <div class="banner">
         <img src="" data-src='http://img14.360buyimg.com/vclist/jfs/t3385/176/136018713/13967/611149a0/5800caf4N720d8de8.jpg'>
     </div>
-    <script src="index.js" charset="utf-8" type="text/javascript"></script>
+    <script src="step1.js" charset="utf-8" type="text/javascript"></script>
 </body>
 </html>
